*Empty MediaWiki Message*

--- a/ვახტანგ_I_გორგასალი.mw
+++ b/ვახტანგ_I_გორგასალი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ვახტანგ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ვახტანგ]]
+|}</small>
+
 '''ვახტანგ I''' გორგასალი, ქართლის მეფე (* დაახლ. V საუკუნის 40-იან წწ. ―   †  [[502]]), პოლიტიკური მოღვაწე და სარდალი. "გორგასალი" ([[სპარსული ენა|სპარსულად]] - მგლისთავა) იმიტომ შერქმევია, რომ [[მუზარადი|მუზარადზე]] [[მგელი]] ჰქონია გამოსახული. 
 
 იღვწოდა ქართლის განთავისუფლებისათვის ირანელთა უღლისაგან, ქვეყნის ცენტრალიზაციისათვის, შეუზღუდველი სამეფო ხელისუფლების შექმნისათვის. 60-იან წლებში ვახტანგ I ირანელებმა ქართლის ლაშქრით შუა აზიაში გაიწვიეს საომრად. დაბრუნების შემდეგ დაიწყო აქტიური სამზადისი ქართლიდან ირანელთა განდევნისათვის. ვახტანგ I-ს ძლიერი ოპოზიცია ჰყავდა ქართლის ფეოდალებში, რ-თაც მხარს უჭერდნენ ირანელები. პირველი იერიში ვახტანგ I-მა ეკლესიაზე მიიტანა. ჩაატარა მისი რეორგანიზაცია, შეცვალა ქართლის ეკლესიის მეთაური და ეპისკოპოსთა თავის მაგივრად კათალიკოსობა დააწესა. ამავე დროს შექმნა ახალი საეპოსკოპოსოები და შეცვალა ზოგი ძველი ეპისკოპოსი. განსაკუთრებული ყურადღება ვახტანგ I-მა, ჩანს, სამეფო დომენს (კახეთ-კუხეთ-ჰერეტს) მიაქცია, სადაც 5 ახალი ეპისკოპოსი დაანიშნინა. ამ რეორგანიზაციას აშკარად პოლიტიკური მიზანი ჰქონდა: ვახტანგ I-მა ეკლესიიდან განდევნა თავისი მოწინააღმდეგები, უფრო მეტად დაუქვემდებარა იგი სამეფო ხელისუფლებას, მოუპოვა მეტი დამოუკიდებლობა  საერთაშორისო სარბიელზე და ამავე დროს ხელახლა გააცხოველა კავშირი კონსტანტინოპოლთან, რასაც დიდი მნიშვნელობა უნდა ჰქონოდა მომავალ ბრძოლაში ირანის წინააღმდეგ. ცენტრალური ხელისუფლების დასაყრდენის გასამტკიცებლად ვახტანგ I-მა დიდი საქალაქო მშენებლობა ჩაატარა, ააშენა ახალი და ხელახლა გაამაგრა ძველი ციხეები და ქალაქები. განსაკუთრებით დიდი მშენებლობა ჩაატარა მან [[უჯარმა|უჯარმასა]] და [[თბილისი|თბილისში]]. თბილისში აპირებდა იგი დედაქალაქის გადატანას, რაც განახორციელა მისმა შვილმა [[დაჩი (ვახტანგ I-ის ძე)|დაჩიმ]]. ეტყობა, ამ მშენებლობის გამო არის მიჩნეული ვახტანგ I ქართული ხალხური ტრადიციის თანახმად თბილისის დამაარსებლად. ვახტანგ I-მა ხელთ იგდო [[კავკასიონი|კავკასიონზე]] გადმოსასვლელები, რომლებიც მანამდე ირანელებს ეჭირათ, და დაუკავშირდა ჩრდილოეთ კავკასიის ჰუნებს. 80-იან წწ. დასაწყისში ირანელებს განსაკუთრებით გაურთულდათ მდგომარეობა შუა აზიაში. ამით ისარგებლა ვახტანგ  I-მა და [[482]] დაიწყო აჯანყება ირანელთა წინააღმდეგ. ქართლის აჯანყებას მხარი დაუჭირა [[სომხეთი|სომხეთმა]] ([[ალბანეთი|ალბანეთში]] აჯანყება უკვე დაწყებული იყო). უპირველეს ყოვლისა ვახტანგ I-მა მოაკვლევინა ქართლის ოპოზიციონერ ფეოდალთა მეთაური [[ვარსქენ პიტიახში]]. აჯანყების პირველ წელს ვახტანგ I-მა შეძლო ირანელთა განდევნა ქართლიდან, მაგრამ მან ვერ მიიღო შეპირებული დაპირება [[ჰუნები|ჰუნებისაგან]], არც ბიზანტიელები დაეხმარნენ. ამას შინაური მტრების აშლილობაც დაემატა და, როცა [[483]] ქართლში მოვიდა ირანის სარდალი მიჰრანი, ვახტანგ I-მა უკან დაიხია ქართლისა და სომხეთის საზღვრებისაკენ. მთებში მას შეუერთდნენ აჯანყებული სომხები ვაჰან მამიკონიანის მეთაურობით. სომეხ-ქართველთ ლაშქარი მტერს შეებრძოლა ჭარმანაინის ველზე. გაიმარჯვეს ირანელებმა, მაგრამ თავისი გამარჯვებით ბოლომდე ვერ ისარგებლეს, რადგან მიჰრანი ირანში გაიწვიეს. [[484]] ქართლში შემოვიდა ირანელი სარდალი ზარმიჰრ ჰაზარავუხტი. ვახტანგ I ეგრისში გადავიდა. ამ დროს ირანელები დამარცხდნენ შუა აზიაში, ბრძოლაში დაიღუპა თვით შაჰი პეროზი. ამან ირანელები აიძულა ზოგი რამ აეთმო აჯანყებულთათვის. ვახტანგ I შემდგომშიც განაგრძობდა ბრძოლას ირანელთა წინააღმდეგ და საბოლოოდ სიცოცხლეც შესწირა მას (გარდაიცვალა ბრძოლაში მიღებული მძიმე ჭრილობისაგან).
