--- a/ვახტანგ_II.mw
+++ b/ვახტანგ_II.mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ვახტანგ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ვახტანგ]]
+|}</small>
 '''ვახტანგ II''', აღმოსავლეთ საქართველოს მეფე [[1289]]-[[1293]], [[დავით VI|დავით VI ნარინის ძე]]. მეფედ დანიშნა მონღოლთა ყაენმა [[ხუტლუბუღა|ხუტლუბუღას]] რჩევით [[დემეტრე II, თავდადებული|დემეტრე II თავდადებულის]] სიკვდილის დასჯის შემდეგ.
 
 [[კატეგორია:ქართველები]]
