--- a/ვახტანგ_III.mw
+++ b/ვახტანგ_III.mw
@@ -1,4 +1,8 @@
-'''ვახტანგ III''', საქართველოს მეფე [[1298]] ან [[1299]] და [[1302]]-[[1308|08]]. [[დემეტრე II, თავდადებული|დემეტრე II თავდადებულის]] ძე. მეფედ დაამტკიცა ყაზანყაენმა [[დავით VIII|დავით VIII-ის]] აჯანყების დროს და ამით მას დაუპირისპირა.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ვახტანგ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ვახტანგ]]
+|}</small>
+'''ვახტანგ III''', საქართველოს მეფე [[1298]] ან [[1299]] და [[1302]]-[[1308|08]]. [[დემეტრე II, თავდადებული|დემეტრე II თავდადებულის]] ძე. მეფედ დაამტკიცა ყაზან ყაენმა [[დავით VIII|დავით VIII-ის]] აჯანყების დროს და ამით მას დაუპირისპირა.
 
 [[კატეგორია:ქართველები]]
 [[კატეგორია:საქართველოს მეფეები]]
