*Empty MediaWiki Message*

--- a/ვახტანგ_IV.mw
+++ b/ვახტანგ_IV.mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ვახტანგ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ვახტანგ]]
+|}</small>
 '''ვახტანგ IV''', საქართველოს მეფე [[1443]]-[[1446]], [[ალექსანდრე I, დიდი | ალექსანდრე I-ის]] ძე. [[ვახუშტი ბატონიშვილი |  ვახუშტი ბატონიშვილის]] ცნობით, ვახტანგ IV-ის მეფობის დროს სამხრეთ საქართველოს [[შაჰ-ჯაჰანის შემოსევა 1444 | შემოსევია შაჰ-ჯაჰანი]].
 
 
