*Empty MediaWiki Message*

--- a/ვახტანგ_VI.mw
+++ b/ვახტანგ_VI.mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ვახტანგ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ვახტანგ]]
+|}</small>
 '''ვახტანგ VI''' (* [[1675]] ― † [[26 მარტი]]. [[1737]], [[ასტრახანი]]), ქართლის გამგებელი ([[ჯანიშინი]]) [[1703]]-[[1714|1714]], მეფე [[1716]]-[[1724|1724]]. [[გიორგი XI|გიორგი XI-ის]] ძმის [[ლევან ბატონიშვილი|ლევანის]] ძე. [[ორბელიანი, სულხან-საბა|სულხან-საბა ორბელიანის]] აღზრდილი.ვახტანგ VI-ის მეფობის ხანა გამორჩეულია საქართველოს ლიტერატურული და ინტელექტუალური აღორძინების დაწყებით. [[ორბელიანი, სულხან-საბა|სულხან-საბა ორბელიანისა]] და [[ანტონ I|ანტონ კათოლიკოსის]] გვერდზე ვახტანგი ითვლება ახალი ქართული ლიტერატურის სულისჩამდგმელად.
 
 [[1703]] ირანის შაჰმა მეფობა გიორგი XI-ს დაუბრუნა, მაგრამ იგი ირანში დატოვა, ხოლო ქართლში ჯანიშინად (მოადგილედ) ვახტანგ VI  დანიშნა. 
