*Empty MediaWiki Message*

--- a/ვახტანგ_II_გურიელი.mw
+++ b/ვახტანგ_II_გურიელი.mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ვახტანგ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ვახტანგ]]
+|}</small>
 '''ვახტანგ II გურიელი''', გურიის მთავარი [[1639]]-[[1640]], [[გიორგი II გურიელი | გიორგი II გურიელის]] უმცროსი ვაჟი. საბატონიშვილოდ ჰქონდა მდინარე ბჟუჯის ხეობა. XVII საუკუნის დასაწყისში ზარზმიდან (სამცხე) გადმოტანილი საეკლესიო სიწმინდეების დასაცავად შემოქმედების საკათედრო ტაძართან ააგო ღვთისმშობლის შობის ეკლესია და მას რამდენიმე აზნაური და 80 კომლი გლეხი შესწირა. [[1639]] გურიელად დასვა [[ლევან II დადიანი | ლევან II დადიანმა]] და ფაქტობრივად მისი ვასალი იყო. 
 
 
