--- a/ვახტანგ_I_გურიელი.mw
+++ b/ვახტანგ_I_გურიელი.mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ვახტანგ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ვახტანგ]]
+|}</small>
 '''ვახტანგ I გურიელი''', გურიის მთავარი [[1583]]-[[1587]]. მთავრად დაჯდომამდე საბატონიშვილოდ ჰქონდა [[ქობულეთის მხარე]]. მთავრად დასვა სამეგრელოს მთავარმა [[მამია IV დადიანი | მამია IV დადიანმა]], რომელმაც დაამარცხა [[გიორგი II გურიელი]]. ვახტანგ I გურიელის ცოლი იყო [[ქაიხოსრო II]] ათაბაგის ასული თამარი. ჰყავდათ შვილები თამარი და [[ქაიხოსრო I გურიელი | ქაიხოსრო]]. 
 
 
