*Empty MediaWiki Message*

--- a/ვახტანგ_ბატონიშვილი_(ალექსანდრე_II-ის_ძე).mw
+++ b/ვახტანგ_ბატონიშვილი_(ალექსანდრე_II-ის_ძე).mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ვახტანგ ბატონიშვილი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ვახტანგ ბატონიშვილი]]
+|}</small>
 '''ვახტანგ ბატონიშვილი''' (''ბაგრატიონი''), [[იმერეთის სამეფო|იმერეთის]] მეფის [[ალექსანდრე II, ბაგრატ VI-ის ძე|ალექსანდრე II-ის]] ძე. 
 
 თავისი უფროსი ძმის, იმერეთის მეფის [[ბაგრატ III, ალექსანდრე II-ის ძე|ბაგრატ III-ის]] მმართველობის პირველ წლებში უკმაყოფილო ვახტანგ ბატონიშვილი ამალით ქართლს გაიქცა. მეფე დაედევნა [[1512]] მოხისთან დაამარცხა იგი. ქართლის მეფის [[დავით X|დავით X-ის]] შუამდგომლობით ძმები შერიგდნენ. შემდეგში ვახტანგ ბატონიშვილი მეფის პოლიტიკის ერთგული მიმდევარი იყო.
