*Empty MediaWiki Message*

--- a/ვახტანგ_ბატონიშვილი_(XIX_საუკუნე).mw
+++ b/ვახტანგ_ბატონიშვილი_(XIX_საუკუნე).mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ვახტანგ ბატონიშვილი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ვახტანგ ბატონიშვილი]]
+|}</small>
 '''ვახტანგ ბატონიშვილი''' (''ბაგრატიონი''), [[იმერეთის სამეფო|იმერეთის]] მეფის [[დავით II, გიორგი VII-ის ძე|დავით გიორგის ძის]] შვილიშვილი.
 
 აქტიურად მონაწილეობდა [[1819]]-[[1820]] [[იმერეთის აჯანყება 1819-1820|იმერეთის აჯანყებაში]]. აჯანყების დამარცხების შემდეგ ახალციხის საფაშოში გაიქცა. [[1835]] ვახტანგ ბატონიშვილი კონსტანტინოპოლში იყო, იქიდან თავის ძმასთან - ტარიელთან ერთად [[პარიზი|პარიზში]]  წავიდა, ურთიერთობა ჰქონდა [[ბროსე, მარი|მ. ბროსთან]].
