*Empty MediaWiki Message*

--- a/ვახტანგ_(ალმასხან)_ბატონიშვილი.mw
+++ b/ვახტანგ_(ალმასხან)_ბატონიშვილი.mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ვახტანგ ბატონიშვილი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ვახტანგ ბატონიშვილი]]
+|}</small>
 '''ვახტანგ (ალმასხან) ბატონიშვილი''' (''ბაგრატიონი''), (* [[22 ივნისი]], [[1761]] ―   †  [[28 ოქტომბერი]], [[1814]], [[პეტერბურგი]]), [[ერეკლე II|ერეკლე II-ისა]] და [[დარეჯანი (დედოფალი)|დარეჯან დედოფლის]] ძე.
 
 [[ლევან ბატონიშვილი (ერეკლე II-ის ძე)|ლევან ბატონიშვილის]] გარდაცვალების შემდეგ საუფლისწულოდ მიიღო [[არაგვის საერისთავო]], აქტიურად მონაწილეობდა [[კრწანისის ბრძოლა 1795|კრწანისის ბრძოლაში]]. ტახტისათვის ატეხილ ბრძოლაში მხარს უჭერდა ძმებს იულონს და ფარნაოზს, ოპოზიციაში ედგა უფროს ძმას გიორგის. [[1802]] რუსთა წინააღმდეგ თავადაზნაურთა გამოსვლის პერიოდში რუსებმა შეიპყრეს და დარეჯან დედოალთან ერთად ავლაბრის სასახლეში დაატუსაღეს. 
