--- a/თხუნელასებრნი.mw
+++ b/თხუნელასებრნი.mw
@@ -1,3 +1,5 @@
 
-
  თხუნელა, იგივე ფუღუ, მომცრო ზომის [[მღრნელი]]ა. ის ცხოვრობს მიწის ქვეშ და რადგანაც თითქმის ბრმაა, გზას ყნოსვით და სმენეთ იკვლევს.
+
+[[de:Maulwurf]]
+[[ru:крот]]
