*Empty MediaWiki Message*

--- a/თხუნელასებრნი.mw
+++ b/თხუნელასებრნი.mw
@@ -1,5 +1,5 @@
+ '''თხუნელასებრნი''' (Talpidae), ძუძუმწოვართა ოჯახი მწერიჭამიების რიგისა. გავრცელებულია ევროპაში, აზიაში და ჩრდილოეთ ამერიკაში. ოჯახში 4 ქვეოჯახია. აქვთ მკვრივი, მოგრძო (20 მმ)მდე
+სხეული. ყურის ნიჟარები არა აქვთ. თვალები განუვითარებელია ან დაფარულია აპკით. 
 
- თხუნელა, იგივე ფუღუ, მომცრო ზომის [[მღრნელი]]ა. ის ცხოვრობს მიწის ქვეშ და რადგანაც თითქმის ბრმაა, გზას ყნოსვით და სმენეთ იკვლევს.
 
-[[de:Maulwurf]]
-[[ru:крот]]
+{{ესკიზი}}
