--- a/სუპერკომპიუტერი.mw
+++ b/სუპერკომპიუტერი.mw
@@ -1,3 +1,30 @@
-სუპერკომპიუტერი ეწოდება დიდი შესაძლებლობების გამომთვლელ მანქანას, რომელიც თანამედროვე ტექნიკურ პროგრესის შესაბამისადაა აღჭურვილი. უმთავრესი დამახასიათებელი ნიშანია პროცესორების რაოდენობა და მყარი დისკების სიდიდე. შესაბამისია ფასიც, რომელიც ასეულობით მილიონ დოლარს აღწევს. 
+'''სუპერკომპიუტერი''' ეწოდება დიდი შესაძლებლობების გამომთვლელ მანქანას, რომელიც თანამედროვე ტექნიკურ პროგრესის შესაბამისადაა აღჭურვილი. უმთავრესი დამახასიათებელი ნიშანია პროცესორების რაოდენობა და მყარი დისკების სიდიდე. შესაბამისია ფასიც, რომელიც ასეულობით მილიონ დოლარს აღწევს. 
 უმთავრესად, სუპერკომპიუტერები გამოიყენებაიან რეალისტური სიმულაციების შესადგენად  მეცნიერების შემდეგ დარგებში: ბიოლოგია, ქიმია, ფიზიკა, მეტეოროლოგია, ასტრონავტიკა, სეისმოლოგია და აშ..  
 ყოველ ნახევარწლედში ხდება სუპერკომპიუტერების ტოპ-500 სიის შედგენა, რომელშიც დღესდღეისობით IBM BlueGene/L (დანიშნულება: ფიზიკური მოვლენების სიმულაცია) ლიდერობს.
+
+
+
+[[cs:Superpočítač]]
+[[de:Supercomputer]]
+[[en:Supercomputer]]
+[[es:Superordenador]]
+[[fi:Supertietokone]]
+[[fr:Superordinateur]]
+[[he:מחשב-על]]
+[[id:Superkomputer]]
+[[it:Supercomputer]]
+[[ja:スーパーコンピュータ]]
+[[ko:슈퍼컴퓨터]]
+[[lo:ຊຸບເປີຄອມພິວເຕີ]]
+[[lt:Superkompiuteris]]
+[[ms:Superkomputer]]
+[[nl:Supercomputer]]
+[[no:Superdatamaskin]]
+[[pl:Superkomputer]]
+[[pt:Supercomputador]]
+[[ro:Supercomputer]]
+[[ru:Суперкомпьютер]]
+[[sl:Superračunalnik]]
+[[sv:Superdator]]
+[[vi:Siêu máy tính]]
+[[zh:超级计算机]]
