--- a/თხუნელასებრნი.mw
+++ b/თხუნელასებრნი.mw
@@ -1,7 +1,8 @@
+[[სურათი:European mole animal.jpg|thumb|ევროპული ანუ ჩვეულებრივი თხუნელა]]
 '''თხუნელასებრნი''' (Talpidae), ძუძუმწოვართა ოჯახი მწერიჭამიების რიგისა. გავრცელებულია ევროპაში, აზიაში და ჩრდილოეთ ამერიკაში. ოჯახში 4 ქვეოჯახია. აქვთ მკვრივი, მოგრძო (20 მმ)მდე
-სხეული. ყურის ნიჟარები არა აქვთ. თვალები განუვითარებელია ან დაფარულია აპკით. წინა კიდურები მოკლეა, ნიჩბისებური, უკან მიმართული ფართო მტევნები მაგარი გრძელი ბრჭყელებით ბოლოვდება. სზეული დაფარულია ხშირი, მოკლე და ხავერდოვანი ბეწვით, რომელსაც ხაო არა აქვს. შეფერილობა ჩვეულებრივად შავია, რუხი ან მოწაბლისფრო.
+სხეული. ყურის ნიჟარები არა აქვთ. თვალები განუვითარებელია ან დაფარულია აპკით. წინა კიდურები მოკლეა, ნიჩბისებური, უკან მიმართული ფართო მტევნები მაგარი გრძელი ბრჭყალებით ბოლოვდება. სხეული დაფარულია ხშირი, მოკლე და ხავერდოვანი ბეწვით, რომელსაც ხაო არა აქვს. შეფერილობა ჩვეულებრივად შავია, რუხი ან მოწაბლისფრო.
 
-თხუნელასებრნი კარგად არიან შეგუებული მიწაში ცხოვრებას. კარგად აქცთ განვითარებული ყნოსვა და შეხება. ყოფილ სსრკ-ის ტერიტორიაზე გავრცელებულია ევროპuლი ანუ [[ჩვეულებრივი თხუნელა]] (Talpa europaea) და შორეული [[აღმოსავლეთის თხუნელა]] (Mogera robusta).  ჩვეულებრივი თხუნელა საქართველოში ბევრგან გვხვდება. ბინადრობენ ტყეში, მდელოზე, ბოსტნებში, ბაღებში, მთებში. ბუდობენ სოროში, 30 სმ სიღრმეზე. მრავლდებიან წელიწადში ერთხელ. მაკეობა 40 დღემდე გრძელდება. შობენ 1-9 უსუსურ ნაშიერს. სასარგებლო ცხოველებია, ანადგურებენ მავნე მწერებს. მცირე ზიანს აყენებენ  ბაღ-ბოსტებსა და სათიბებს, რადგან მიწას თხრიან და მცენარის ფესვთა სისტემას აზიანებენ.
+თხუნელასებრნი კარგად არიან შეგუებული მიწაში ცხოვრებას. კარგად აქცთ განვითარებული ყნოსვა და შეხება. ყოფილ სსრკ-ის ტერიტორიაზე გავრცელებულია ევროპული ანუ [[ჩვეულებრივი თხუნელა]] (Talpa europaea) და შორეული [[აღმოსავლეთის თხუნელა]] (Mogera robusta).  [[ჩვეულებრივი თხუნელა]] [[საქართველო|საქართველოში]] ბევრგან გვხვდება. ბინადრობენ ტყეში, მდელოზე, ბოსტნებში, ბაღებში, მთებში. ბუდობენ სოროში, 30 სმ სიღრმეზე. მრავლდებიან წელიწადში ერთხელ. მაკეობა 40 დღემდე გრძელდება. შობენ 1-9 უსუსურ ნაშიერს. სასარგებლო ცხოველებია, ანადგურებენ მავნე მწერებს. მცირე ზიანს აყენებენ  ბაღ-ბოსტებსა და სათიბებს, რადგან მიწას თხრიან და მცენარის ფესვთა სისტემას აზიანებენ.
 
 
 
