*Empty MediaWiki Message*

--- a/სუპერკომპიუტერი.mw
+++ b/სუპერკომპიუტერი.mw
@@ -1,7 +1,7 @@
 [[სურათი:800px-Cray 2 Arts et Metiers dsc03940.jpg|thumb|1985-1989 წლების ჩქარი კომპიუტერი Cray-2]] 
 '''სუპერკომპიუტერი''' ეწოდება დიდი შესაძლებლობების გამომთვლელ მანქანას, რომელიც თანამედროვე ტექნიკურ პროგრესის შესაბამისადაა აღჭურვილი. უმთავრესი დამახასიათებელი ნიშანია პროცესორების რაოდენობა და მყარი დისკების სიდიდე. შესაბამისია ფასიც, რომელიც ასეულობით მილიონ დოლარს აღწევს. 
 უმთავრესად, სუპერკომპიუტერები გამოიყენებაიან რეალისტური სიმულაციების შესადგენად  მეცნიერების შემდეგ დარგებში: ბიოლოგია, ქიმია, ფიზიკა, მეტეოროლოგია, ასტრონავტიკა, სეისმოლოგია და აშ..  
-ყოველ ნახევარწლედში ხდება სუპერკომპიუტერების ტოპ-500 სიის შედგენა, რომელშიც დღესდღეისობით IBM BlueGene/L (დანიშნულება: ფიზიკური მოვლენების სიმულაცია) ლიდერობს.
+ყოველ ნახევარწლედში ხდება სუპერკომპიუტერების ტოპ-500 სიის შედგენა, რომელშიც დღესდღეისობით [[IBM BlueGene/L ]](დანიშნულება: ფიზიკური მოვლენების სიმულაცია) ლიდერობს.
 
 
 
