*Empty MediaWiki Message*

--- a/IBM_BlueGene%2FL.mw
+++ b/IBM_BlueGene%2FL.mw
@@ -1,1 +1,4 @@
-'''IBM BlueGene/L''' დღესდღეისობით ყველაზე ჩქარი [[სუპერკომპიუტერი]]  135 [[ტერაფლოპით]] და  32768 [[პროცესორით]] , თუმცა მისი განახლება და აღჭურვა მუდვივად ხდება.
+'''IBM BlueGene/L''' დღესდღეისობით ყველაზე ჩქარი [[სუპერკომპიუტერი]]  135 [[ტერაფლოპი|ტერაფლოპით]] და  32768 [[პროცესორ|პროცესორით]] , თუმცა მისი განახლება და აღჭურვა მუდვივად ხდება.
+
+
+{{ესკიზი}}
