*Empty MediaWiki Message*

--- a/IBM_BlueGene%2FL.mw
+++ b/IBM_BlueGene%2FL.mw
@@ -1,4 +1,15 @@
-'''IBM BlueGene/L''' დღესდღეისობით ყველაზე ჩქარი [[სუპერკომპიუტერი]]  135 [[ტერაფლოპი|ტერაფლოპით]] და  32768 [[პროცესორ|პროცესორით]] , თუმცა მისი განახლება და აღჭურვა მუდვივად ხდება.
+'''IBM BlueGene/L''' დღესდღეობით ყველაზე ჩქარი [[სუპერკომპიუტერი]]  135 [[ტერაფლოპი|ტერაფლოპით]] და  32768 [[პროცესორ|პროცესორით]] , თუმცა მისი განახლება და აღჭურვა მუდვივად ხდება.
 
 
 {{ესკიზი}}
+
+
+[[de:BlueGene]]
+[[en:Blue Gene]]
+[[eo:BlueGene]]
+[[fr:Blue Gene]]
+[[id:Blue Gene]]
+[[it:Blue Gene]]
+[[ja:ブルージーン]]
+[[nl:Blue Gene]]
+[[sv:Blue Gene]]
