*Empty MediaWiki Message*

--- a/ფუღუ.mw
+++ b/ფუღუ.mw
@@ -1,3 +1,4 @@
+[[სურათი:Suncus etruscus.jpg|thumb|ფუღუ]]
 '''ფუღუ''' (Suncus etruscus), ძუძუმწოვარი ცხოველი [[მწერიჭამიების რიგი|მწერიჭამიების რიგისა]]. მისი სხეულის სიგრძე 45 მმ, კუდისა - 31 მმ, მასა - 1,5 გ აღწევს. ძუძუმწოვრებს შორის ყველაზე მომცროა. გავრცელებულია ევროპაში, აზიასა და აფრიკაში. საქართველოში გვხვდება მხოლოდ თბილისის მიდამოებში. როგორც უნიკალური და მცირე არეალის მწონე სახეობა, შეტანილია საქართველოს "წითელ წიგნში". იკვებება [[მწერები|მწერებით]]. ფუღუს ბიოლოგია ჯერჯერობით არ არის შესწავლილი.
 
 
