*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_ს.mw
+++ b/ცნობილი_ქართველები:_ს.mw
@@ -85,10 +85,10 @@
 * [[სვანიძე, გივი]] - ჰიდროლოგი და ჰიდროენერგეტიკოსი
 * [[სვანიძე, პროკოფი]] - სოციალისტური შრომის გმირი
 * [[სვიმეონი]] - საქართველოს პოლიტიკური მოღვაწე
-* [[სვიმონი, XII საუკუნე]] - საქართველოს კათალიკოს-პატრიარქი
-* [[სვიმონი, XVI ს.]] - აღმოსავლეთ საქართველოს კათალიკოს-პატრიარქი
-* [[სვიმონი (ჩხეტისძე)]] - დასავლეთ საქართველოს კათალიკოს-პატრიარქი
-* [[სვიმონი (გვარად ინაურიძე)]] - გარეჯის მრავალმთის დოდოს მონასტრის წინამძღვარი
+* [[სვიმონი (XII ს.)]] - საქართველოს კათოლიკოს-პატრიარქი
+* [[სვიმონი (XVI ს.)]] - აღმოსავლეთ საქართველოს კათოლიკოს-პატრიარქი
+* [[სვიმონი (ჩხეტისძე)]] - დასავლეთ საქართველოს კათოლიკოს-პატრიარქი
+* [[სვიმონი (ინაურიძე)]] - გარეჯის მრავალმთის დოდოს მონასტრის წინამძღვარი
 * [[სვიმონიშვილი, მიხეილ]] - თანამედროვე პოლიტიკური მოღვაწე
 
 ==სი==
