*Empty MediaWiki Message*

--- a/სვიმონი.mw
+++ b/სვიმონი.mw
@@ -1,10 +1,11 @@
-
-{{მრავალმნიშვნელოვანი}}
-
 საკუთარი სახელი '''სვიმონ''' შეიძლება აღნიშნავდეს ერთ-ერთ შემდეგ პიროვნებათაგანს:
 
 * [[სვიმეონი]] - საქართველოს პოლიტიკური მოღვაწე
-* [[სვიმონი, XII საუკუნე]] - საქართველოს კათალიკოს-პატრიარქი
-* [[სვიმონი, XVI ს.]] - აღმოსავლეთ საქართველოს კათალიკოს-პატრიარქი
+* [[სვიმონი (XII ს.)]] - საქართველოს კათალიკოს-პატრიარქი
+* [[სვიმონი (XVI ს.)]] - აღმოსავლეთ საქართველოს კათალიკოს-პატრიარქი
 * [[სვიმონი (ჩხეტისძე)]] - დასავლეთ საქართველოს კათალიკოს-პატრიარქი
-* [[სვიმონი (გვარად ინაურიძე)]] - გარეჯის მრავალმთის დოდოს მონასტრის წინამძღვარი
+* [[სვიმონი (ინაურიძე)]] - გარეჯის მრავალმთის დოდოს მონასტრის წინამძღვარი
+
+
+
+{{მრავალმნიშვნელოვანი}}
