*Empty MediaWiki Message*

--- a/სვიმონი.mw
+++ b/სვიმონი.mw
@@ -1,9 +1,9 @@
 საკუთარი სახელი '''სვიმონ''' შეიძლება აღნიშნავდეს ერთ-ერთ შემდეგ პიროვნებათაგანს:
 
 * [[სვიმეონი]] - საქართველოს პოლიტიკური მოღვაწე
-* [[სვიმონი (XII ს.)]] - საქართველოს კათალიკოს-პატრიარქი
-* [[სვიმონი (XVI ს.)]] - აღმოსავლეთ საქართველოს კათალიკოს-პატრიარქი
-* [[სვიმონი (ჩხეტისძე)]] - დასავლეთ საქართველოს კათალიკოს-პატრიარქი
+* [[სვიმონი (XII ს.)]] - საქართველოს კათოლიკოს-პატრიარქი
+* [[სვიმონი (XVI ს.)]] - აღმოსავლეთ საქართველოს კათოლიკოს-პატრიარქი
+* [[სვიმონი (ჩხეტისძე)]] - დასავლეთ საქართველოს კათოლიკოს-პატრიარქი
 * [[სვიმონი (ინაურიძე)]] - გარეჯის მრავალმთის დოდოს მონასტრის წინამძღვარი
 
 
