--- a/17_მარტი.mw
+++ b/17_მარტი.mw
@@ -2,12 +2,14 @@
 
 
 ==დღის მოვლენები==
-
-*[[1521]] :  მაგელანმა ფილიპინები აღმოაჩინა.
-*[[1861]] : იტალია გამოცხადდა სამეფოდ.
-*[[1959]] : [[დალაი ლამა]] ტიბეტიდან ინდოეთში გაიქცა.
-*[[1969]] : გოლდა მეირი აირჩიეს ისრაელის მე-4 პრემიერ-მინისტრად.
-
+*[[624]] : მუჰამედის გადამწყვეტი გამარჯვება მექას მოწინააღმდეგეებთან ბადრის ბრძოლაში.
+*[[1756]] : [[სენტ-პატრიკის დღე]] პირველად აღინიშნა ნიუ-იორკში.
+*[[1805]] : [[იტალიის რესპუბლიკა]] ხდება [[იტალიის სამეფო]], და ნაპოლეონი პრეზიდენტის ნაცვლად მეფე ხდება.
+*[[1845]] : [[რეზინი|რეზინის]] ლენტა გამოიგონეს.
+*[[1931]] : [[ნევადა|ნევადაში]] აზარტული თამაშების ლეგალიზაცია ხდება.
+*[[1941]] : ვაშინგტონში პრეზიდენტი [[რუზველტი, ფრანკლინ|ფრანკლინ რუზველტი]] ოფიციალურად ხსნის [[ხელოვნების ეროვნული გალერეა (ვაშინგტონი)|ხელოვნების ეროვნულ გალერეას]].
+*[[1959]] : ტენზინ გიაცო, მე-14 [[დალაი ლამა]], [[ტიბეტი|ტიბეტიდან]] დევნის გამო ინდოეთს აფარებს თავს.
+*[[1969]] : [[მეირი, გოლდა|გოლდა მეირი]], [[ვისკონსინი|ვისკონსინიდან]], აირჩიეს [[ისრაელი|ისრაელის]] მე-4 პრემიერ-მინისტრად.
 
 ==ამ დღეს დაბადებულნი==
 
