--- a/ეგვიპტის_მუზეუმი_(კაირო).mw
+++ b/ეგვიპტის_მუზეუმი_(კაირო).mw
@@ -12,7 +12,7 @@
 *[[ეგვიპტის მუზეუმი (ბერლინი)]]
 
 ==რუსერსები ინტერნეტში==
-http://www.egyptianmuseum.gov.eg/
+*[http://www.egyptianmuseum.gov.eg/ მუზეუმის ვებ-გვერდი]
 
 [[კატეგორია:მუზეუმები]]
 [[კატეგორია:არქეოლოგიური მუზეუმები]]
