*Empty MediaWiki Message*

--- a/დედოფალ_სოფიას_მუზეუმი_(მადრიდი).mw
+++ b/დედოფალ_სოფიას_მუზეუმი_(მადრიდი).mw
@@ -1,3 +1,4 @@
+[[სურათი:MuseoReinaSofiaMadrid.JPG|thumb|300px|დედოფალი სოფიას მუზეუმის ფასადი]]
 '''დედოფალი სოფიას ხელოვნების ეროვნული მუზეუმი''' (ესპ. Museo Nacional Centro de Arte Reina Sofía) [[ესპანეთი|ესპანეთის]] მე-20 საუკუნის ხელოვნების ეროვნული მუზეუმია (შემოკლ. '''დედოფალი სოფიას მუზეუმი'''). მუზეუმის ოფიციალური ინაუგურაცია 1992 წლის 10 სექტემბერს მოხდა და სახელი ესპანეთის დედოფფლის სოფიას საპატივცემლოდ დაერქვა. მდებარეობს [[მადრიდი|მადრიდში]], ე.წ ხელოვნების სამკუთხედის სამხრეთ ბოლოში ([[მუზეო დელ პრადო|მუზეო დელ პრადოსა]] და [[მუზეო თისენ-ბორნამისცა|მუზეო თისენ-ბორნამისცასთან]] ერთად).
 
 მუზეუმის მთავარ კოლექციათა შორისაა მე-20 საუკუნის უდიდეს ხელოვანთა [[პიკასო, პაბლო|პაბლო პიკასოსა]] და [[დალი, სალვადორ|სალვადორ დალის]] ნამუშევრები. უდაოდ ყველაზე განთქმული ხელოვნების ნიმუში მუზეუმში არის პიკასოს "გერნიკა". რეინა სოფიაში ასევე [[გრი, ხუან|ხუან გრის]], [[მირო, ხოან|ხოან მიროს]], ხულიო გონზალესის, ედუარდო ჩილიდას, პაბლო პალზუელოს, ანტონი ტაპიეს, ლუციო მუნიოს და სხვა მრავალ განთქმულ მხატვართა თვალსაჩინო კოლექციებია. აქვეა თავისუფალი ბიბლიოთეკა 100.000-ზე მეტი წიგნით, 3.500 ხმისა და 1.000-ზე მეტი ვიდეო ჩანაწერებით.
