*Empty MediaWiki Message*

--- a/ბრიტანეთის_მუზეუმი.mw
+++ b/ბრიტანეთის_მუზეუმი.mw
@@ -6,6 +6,8 @@
 ბტიტანეთის მუზეუმში, ისევე როგორც ლონდონის სხვა გალერიებში, შესვლა უფასოა. თუმცა ზოგიერთი სპეციალური დროებითი ეგზიბიციები ფასიანია.
 
 {{ითარგმნება}}
+==რესურსები ინტერნეტში==
+* [http://the.british.museum/ ბრიტანეთის მუზეუმის ოფიციალური ვებ-გვერდი']
 
 [[კატეგორია:მუზეუმები]]
 [[კატეგორია:ეროვნული მუზეუმები]]
