--- a/ბრიტანეთის_მუზეუმი.mw
+++ b/ბრიტანეთის_მუზეუმი.mw
@@ -1,5 +1,5 @@
 [[სურათი:British museum facade.jpg|thumb|300px|მუზეუმის ფასადი]]
-'''ბრიტანეთის მუზეუმი''' ლონდონში არის გაერთიანებული სამეფოს, ისევე როგორც მსოფლიოს, ადამიანის ისტორიისა და კულტურის უდიდესი და უმნიშვნელოვანესი მუზეუმია. მსოფლიოს უძველესი მუზეუმი დაარსდა 1753 წელს და ძირითადად შედგებოდა ფიზიკოსისა და მეცნიერი სერ ჰანს სლოანის კოლექციისგან. მუზეუმი საზოგადოებისთვის პირველად გაიხსნა 1759 წლის 15 იანვარს მონტაგუ-ჰაუზში, ბლუმსბერი, ამჟამინდელი მუზეუმის შენობის ადგილას.
+'''ბრიტანეთის მუზეუმი''' [[ლონდონი|ლონდონში]] [[დიდი ბრიტანეთი|გაერთიანებული სამეფოშო]], ისევე როგორც მსოფლიოში, ადამიანის ისტორიისა და კულტურის უდიდესი და უმნიშვნელოვანესი [[მუზეუმი|მუზეუმია]]. მსოფლიოს უძველესი მუზეუმი დაარსდა [[1753]] წელს და ძირითადად შედგებოდა მეცნიერ-ფიზიკოსი [[სლოანი, ჰანს|სერ ჰანს სლოანის]] კოლექციისგან. მუზეუმი საზოგადოებისთვის პირველად გაიხსნა [[1759]] წლის [[15 იანვარი|15 იანვარს]] მონტაგუ-ჰაუზში, [[ბლუმსბერი]], ამჟამინდელი მუზეუმის შენობის ადგილას.
 
 ბრიტანეთის მუზეუმში ინახება შვიდ მილიონზე მეტი ობიექტი, რომელიც დოკუმენტური ნივთმტკიცებაა ადამიანთა მოდგმის კულტურის ისტორიისა მისი დასაბამიდან დღემდე. ნიმუშთა დიდი ნაწილი მიწისქვეშა საცავში ინახება გამოსაფენი ადგილის უკმარისობის გამო.
 
