--- a/მუზეუმების_სია.mw
+++ b/მუზეუმების_სია.mw
@@ -58,6 +58,9 @@
 *[[ნარას ეროვნული მუზეუმი]]
 *[[ტოკიოს ეროვნული მუზეუმი]]
 
+===მონაკო===
+*[[ოკეანოგრაფიული მუზეუმი (მონაკო)]]
+
 ===რუსეთი===
 *[[ერმიტაჟი (სანქტ-პეტერბურგი)]]
 *[[ტრეტიაკოვის გალერეა (მოსკოვი)]]
