*Empty MediaWiki Message*

--- a/ოკეანოგრაფიული_მუზეუმი_(მონაკო).mw
+++ b/ოკეანოგრაფიული_მუზეუმი_(მონაკო).mw
@@ -4,13 +4,14 @@
 მუზეუმში დიდი რაოდენობით ზღვის ცხოველია თავმოყრილი (ზღვის ვარსკვლავები, ცხენთევზები, კუები, მედუზები, კრაბები, კიბოები, გველთევზები, ზვიგენები, და მრავ. სხვა). მუზეუმის საკუთრებაშია ასევე დიდი რაოდენობით ზღვასთან დაკავშირებული საგნები, მათ შორის გემების მოდელები, ზღვის ცხოველთა ჩონჩხები, ხელსაწყოები, იარაღი და სხვ.
 
 მუზეუმის დირექტორი დიდი ხნის განავლობაში, 1957 წლიდან მოყოლებული იყო [[კუსტო, ჟაკ|ჟაკ კუსტო]].
-
+<br>
+<br>
 ==გალერეა==
 <gallery>
-Image:Dinosaur_skeleton_Monaco.jpeg|A giant skeleton
-Image:Aquarium-Monaco1.jpeg|An aquarium tank
-Image:Aquarium-Monaco2.jpeg|A big fish
-Image:Aquarium-Monaco3.jpeg|A swarm of little fish
+Image:Dinosaur_skeleton_Monaco.jpeg|უზარმაზარი ჩონჩხი
+Image:Aquarium-Monaco1.jpeg|აქვარიუმი
+Image:Aquarium-Monaco2.jpeg|დიდი თევზი
+Image:Aquarium-Monaco3.jpeg|პაწაწინა თევზების ხროვა
 </gallery>
 
 ==რესურსები ინტერნეტში==
