--- a/მუზეუმების_სია.mw
+++ b/მუზეუმების_სია.mw
@@ -42,7 +42,7 @@
 *[[ერაყის ეროვნული მუზეუმი (ბაღდადი)]]
 
 ===ესპანეთი===
-*[[ბილბაოს გუგენჰაიმის მუზეუმი]]
+*[[გუგენჰაიმის მუზეუმი (ბილბაო)]]
 *[[დედოფალი სოფიას ხელოვნების ეროვნული მუზეუმი (მადრიდი)]]
 *[[მიროს მუზეუმი (ბარსელონა)]]
 *[[მუზეო დელ პრადო (მადრიდი)]]
