--- a/კარლ_დენიცი.mw
+++ b/კარლ_დენიცი.mw
@@ -3,7 +3,101 @@
 
 
 
-== ბიოგრაფია ==
+==დასაწყისი==
+[[1910]] წლის [[1 აპრილი|1 აპრილს]] დიონიცი გერმანიის საიმპერიო საზღვაო ფლოტის კადეტი გახდა. სასწავლო პრაქტიკა მან კრეისერ «ჰერთა»-ზე და [[ფლენსბურგი|ფლენსბურგის]] საზღვაო სკოლაში გაიარა. [[1912]] წლის [[1 ოქტომბერი|1 ოქტომბერს]] იგი გამწესებულ იქნა კრეისერ «ბრესლაუ»-ზე ამსახუროს, რომელიც ხმელთაშუა ზღვაში ცურავდა. [[1913]] წელს მას [[ლეიტენანტი|ლეიტენანტის]] სამხედრო წოდება მიენიჭა.
+
+* 01.04.1910-31.03.1911 - პირველადი პრაქტიკა კრეისერ «ჰერთა»-ზე
+* 01.04.1911-30.09.1912 - საზღვაო სკოლა და სპეცპრაქტიკა
+
+
+==პირველი მსოფლიო ომი ==
+[[პმო|პირველი მსოფლიო ომის]] დაწყებას დიონიცი მცირე ზომის კრეისერ «ბრესლაუ»-ზე შეხვდა. კრეისერი ფორმალურად [[თურქეთი|თურქეთის]] მიერ იყო ნაყიდი, მისი დროშის ქვეშ ცურავდა »მიდილი»-ს სახელით და იბრძოდა [[რუსეთი|რუსეთის]] ფლოტის წინააღმდეგ შავ ზღვაში.
+
+[[1916]] წელს დიონიცს [[ობერლეიტენანტი|ობერლეიტენანტის]] სამხედრო წოდება მიენიჭა და მას შემდეგ რაც კრეისერი «ბრესლაუ/მიდილი» შესაკეთებლად პორტში იქნა სტაციონირებული იგი ერთ-ერთი აეროპორტის მმართველად იქნა გამწესებული დარდანელის ფრონტზე. სწორედ აქ ჩაეწერა იგი მოხალისედ ახლადშექმნილ წყალქვეშა ნავების მეზღვაურთა შემადგენლობაში. შესაბამისი სამხედრო განათლების მიღების შემდეგ [[1918]] წლის თებერვალში იგი „U39“-ზე ზედამხედველ ოფიცრად იქნა დანიშნული. მალე დიონიცი „UC25“-ის კომანდანტად დაინიშნა, ხოლო [[1918]] წლის [[5 სექტემბერი|5 სექტემბრიდან]] მეთაურობდა „UB68“-ს. ამ წყალქვეშა ნავით იგი [[ინგლისი|ინგლისელებს]] ებრძოდა ხმელთაშუა ზღვაში. ერთ-ერთი რეიდის დროს დიონიცის წყალქვეშა ნავი ინგლისი ფრლოტის გემების მიერ იქნა ჩაძირული და ის და მისი მებრძოლები ტყვედ ჩავარდნენ. 
+
+ტყვეობაში ჩავრდნამდე სამსახურის პერიოდში დიონიცი მიხვდა, რომ გერმანული სამხედრო სტრატეგია გამოეყენებინათ წყალქვეშა ნავები მხოლოდ და მხოლოდ გემების დამცავ-გამცილებელ ერთეულებად არაეფექტური იყო. ამიტომ [[1919]] წლიდან, როცა ის გაათავისუფლეს ტყვეობიდან, იგი წყალქვეშა ნავების სამხედრო შესაძლებლობების თეორიულ შემუშავებას შეუდგა.
+
+* 01.10.1912-11.09.1916 - კრეისერი »ბრესლაუ/მიდილი»
+* 12.09.1916-00.12.1916 - სამხედრო აეროპორტი »სან-სტეფანო» და »დარდანელი»
+* 00.12.1916-16.01.1917 - წყალქვეშა ნავის მეთაურის საგანმაათლებლო კურსი
+* 17.01.1917-28.02.1918 - „U39“-ის ზედამხედველი ოფიცერი
+* 01.03.1918-04.09.1918 - „UC27“-ის კომენდანტი
+* 05.09.1918-04.10.1918 –„UB68“-ის მეთაური
+
+
+==მშვიდობიანობის დრო==
+
+
+==მეორე მსოფლიო ომი==
+
+
+==ჯილდოები და დაწინაურებები==
+===ჯილდოები=== 
+* «[[ნსდაპ-ის ოქროს პარტიული ნიშანი]]» ([[1944]]) საპატიო წევრი - Goldenes Parteiabzeichen der Nationalsozialistischen Deutschen Arbeiterpartei 
+* «[[მეჯიდის ორდენი]]» მე-4 კლასის
+* «თურქული მედალი ხმლებით»
+* «თურქული რკინის ნახევარმთვარე»
+* უნგრული «დამსახურების ორდენის» [[კომანდორი|კომანდორის]] ჯვარი
+* «შვედეთის სამეფო ხმლების ორდენის» 1-ლი კლასის რაინდის ჯვარი 
+* «სავოიის სამეფო სახლის სამხედრო ორდენის» კომანდორის ჯვარი - Commandantore della ordine Militare de Savoyen
+* თეთრი ფერის ესპანეთის «ფლოტის დამსახურების ჯვარი»
+* რუმინული »მიხაილ მამაცის ორდენი» მე-3 და მე-2 კლასის
+* იაპონური «ამომავალი მზის ორდენი» 1-ლი კლასის
+* ანჰალტის «ფრიდრიხის ჯვარი» - Anhaltisches Friedrich Kreuz
+* ავსტრიული «სამხედრო დამსახურების ჯვარი» მე-2 კლასის - Österreichischer Militärverdienstkreuz 2. Klasse 
+* «[[ჰოენცოლერნთა სამეფო სახლის ორდენი|ჰოენცოლერნთა სამეფო სახლის ორდენის]]» რაინდის ჯვარი ხმლებით - Ritterkreuz des Königlichen Hausordens von Hohenzollern mit Schwertern
+* «ფრონტზე მებრძოლთა ღირსების ჯვარი» - Ehrenkreuz für Frontkämpfer
+* «საზოგადო ღირსების ნიშანი» - Allgemeines Ehrenzeichen
+* «1938 წლის 1 ოქტომბრის ხსოვნის მედალი» - Medaille zur Erinnerung an den 1. Oktober 1938
+* ორმაგი მოხსენიება «[[ვერმახტი|ვერმახტის]]» ნუსხაში 
+* «წყალქვეშა ნავის ნიშანი» (1918) - U-Bootabzeichen (1918)
+* ოქროს «[[თვითმფრინავის მეთაურის და მზვერავის ნიშანი]]» ბრილიანტებით (საპატიო მფლობელი, არ უტარებია) - Flugzeugführer- und Beobachterabzeichen in Gold mit Brillanten 
+* ოქროს «წყალქვეშა ნავის საბრძოლო ნიშანი» ბრილიანტებით - U-Boot-Kriegsabzeichen in Gold mit Brillanten
+* «[[რკინის ჯვარი (ორდენი)|რკინის ჯვარი]]» (1914) მე-2 და 1-ლი კლასის - Eisernes Kreuz (1914) 2. und 1. Klasse
+* «რკინის ჯვარი» (1939) მე-2 და 1-ლი კლასის - Eisernes Kreuz (1939) 2. und 1. Klasse
+* «რკინის ჯვრის» რაინდის ჯვარი მუხის ფოთოლით - Ritterkreuz des Eisernen Kreuzes mit Eichenlaub
+* რაინდის ჯვარი (21.04.1940) - Ritterkreuz 
+* მუხის ფოთოლი (07.04.1943) - Eichenlaub 
+
+
+===დაწინაურებები===
+* 01.04.10 - საზღვაო კადეტი
+* 15.04.11 - საზღვაო სერჟანტი
+* 27.09.13 - საზღვაო ლეიტენანტი
+* 22.03.16 - საზღვაო ობერლეიტენანტი
+* 01.01.21 - კაპიტან-ლეიტენანტი
+* 01.11.28 - კორვეტენკაპიტანი
+* 01.10.33 - ფრეაგატენკაპიტანი
+* 01.10.35 - საზღვაო კაპიტანი
+* 28.01.39 - კომოდორი
+* 01.10.39 - კონტრადმირალი
+* 01.09.40 - ვიცეადმირალი
+* 14.03.42 - ადმირალი
+* 30.01.43 - გროსადმირალი 
+
+
+==ნაშრომები==
+* Karl Dönitz/TH. Kraus: Die Kreuzerfahrten der Goeben und Breslau, Berlin 1932, Ullstein-Verlag.
+* Karl Dönitz: Die U-Bootswaffe, Berlin 1942, E. S. Mittler & Sohn.
+* Karl Dönitz: Ich lege Rechnung, München 1953, Quick Ausgabe Nr. 19.
+* Karl Dönitz: Zehn Jahre und Zwanzig Tage, Bonn 1958, Athenäum-Verlag. ISBN B0000BHH4J
+* Karl Dönitz: Mein wechselvolles Leben, Göttingen 1968, Musterschmidt-Verlag. ISBN 3788116633
+* Karl Dönitz: Deutsche Strategie zur See im Zweiten Weltkrieg, Frankfurt am Main, 1970 Bernard&Greafe-Verlag. 3763751009
+
+
+==ლიტერატურა==
+* Walter Lüdde-Neurath: Regierung Dönitz, Göttingen 1950, Musterschmidt-Verlag. ISBN B0000BL3ID
+* Wolfgang Frank: Die Wölfe und der Admiral, Oldenburg-HH 1953, Gerhard-Stalling-Verlag. ISBN 3404650255
+* Marlis G. Steinert: Die 23 Tage der Regierung Dönitz, Düsseldorf 1967, Econ-Verlag. ISBN B0000BTG6U
+* Walter Görlitz: Karl Dönitz - Der Großadmiral, Göttingen 1970, Musterschmidt-Verlag. ISBN 378810069
+* Karl Alman: Grossadmiral Karl Dönitz, Berg am See 1980, Kurt Vowinckel-Verlag. ISBN 3921655306
+* Deutscher Marinebund (Walter Frank): Dönitz, Wilhelmshaven 1981, Deutscher Marinebund.
+* Peter Padfield: Dönitz - The Last Führer (dts.: Des Teufels Admiral), London 1974 (Ullstein-Verlag 1984). ISBN 3550079567
+* Steven Roskill: The War at Sea.
+* Winston Churchill: Der Zweite Weltkrieg.
+* Peter Padfield: Der U-Boot-Krieg 1939-1945.
+* Paul Herbert: Der Tod auf allen Meeren, Militärbuchverlag der D
+
 
 
 [[კატეგორია: გერმანელები]] 
