*Empty MediaWiki Message*

--- a/შუცშტაფელი.mw
+++ b/შუცშტაფელი.mw
@@ -1,4 +1,4 @@
-«დამცავი რაზმი» – «სს» ([[გერმ.]]: Schutzstaffel - SS) [[1934]]-[[1945]] წლებში იყო დამოუკიდებელი, პარამილიტარისტული ორგანიზიაცია [[ნსდაპ|ნაცისტური]] პარტიის შემადგენლობაში, რომლის შემადგენელი ნაწილები (ორგანიზაციები) მთავარი დამნაშავენი იყვნენ [[ჰოლოკოსტი|ჰოლოკოსტში]]. «სს»-ის დევიზი იყო „ჩვენი ღირსებას ერთგულება ჰქვია“ ([[გერმ.]]: „Unsere Ehre heißt Treue“).
+«'''დამცავი რაზმი'''» – «'''სს'''» ([[გერმ.]]: Schutzstaffel - SS) [[1934]]-[[1945]] წლებში იყო დამოუკიდებელი, პარამილიტარისტული ორგანიზიაცია [[ნსდაპ|ნაცისტური]] პარტიის შემადგენლობაში, რომლის შემადგენელი ნაწილები (ორგანიზაციები) მთავარი დამნაშავენი იყვნენ [[ჰოლოკოსტი|ჰოლოკოსტში]]. «სს»-ის დევიზი იყო „ჩვენი ღირსებას ერთგულება ჰქვია“ ([[გერმ.]]: „Unsere Ehre heißt Treue“).
 
 
 ==«სს»-ის წინამორბედი ორგანიზაციები==
