--- a/შუცშტაფელი.mw
+++ b/შუცშტაფელი.mw
@@ -9,3 +9,28 @@
 
 ==«სს»-ის ისტორია==
 ===დაარსება===
+
+
+[[da:SS]]
+[[de:Schutzstaffel]]
+[[el:Schutzstaffel]]
+[[en:Schutzstaffel]]
+[[eo:SS (organizaĵo)]]
+[[es:SS]]
+[[fa:گردان حفاظتی آلمان نازی (اِس اِس)]]
+[[fi:SS]]
+[[fr:Schutzstaffel]]
+[[he:אס אס]]
+[[id:Schutzstaffel]]
+[[it:Schutzstaffel]]
+[[ja:親衛隊 (ナチス)]]
+[[nl:Schutzstaffel]]
+[[no:Schutzstaffel]]
+[[pl:Schutzstaffeln]]
+[[pt:Schutzstaffel]]
+[[ro:Schutzstaffel]]
+[[ru:СС]]
+[[sl:SS]]
+[[sr:Шуцштафел]]
+[[sv:Schutzstaffeln]]
+[[zh:黨衛隊]]
