--- a/იოზეფ_გებელსი.mw
+++ b/იოზეფ_გებელსი.mw
@@ -19,7 +19,7 @@
 [[სურათი:Goebbels-1925.jpg|thumb|180px|გიობელსი XX ს-ის 20-იან წლებში]]
 გიობელსი, რომელიც [[რაინლანდ-პფალცი|რაინლანდსა]] და [[ჩრდილოეთი რაინ-ვესტფალია|ვესტფალიაში]] აგიტატორობდა, [[შტრასერი, გრეგორ|გრეგორ შტრასერის]] პირადი მდივანი გახდა. [[1925]] წლის ''[[1 ოქტომბერი|1 ოქტომბრიდან]]'' ძმებ შტრასერებთან ერთად იგი გამოსცემდა ''"ნაციონალ-სოციალისტურ წერილებს"''. კრიტიკოსები მემარჯვენე ბანაკიდან გიობელსს "კომუნისტურ" წერის მანერაში დებდნენ ბრალს. იგი ძმებ შტრასერებთან ერთად პარტიის მემარცხენე ფრთის წევრი იყო, რომლებიც "სოციალისტური" ამბიციებს "ნაციონალურზე" წინ აყენებდნენ.
 
-ამ პერიოდში გიობელსი არათუ უარყოფდა პოლიტიკურ კავშირ [[სსრკ]]-თან, არამედ [[ლენინი, ვლადიმერ|ლენინით]] იმდენად აღფრთოვანებული იყო, რომ ამ უკანასკნელში "რუსეთის ნაციონალურ გამათავისუფლებელს" ხედავდა. მისი აზრით "გერმანიასაც არ უნდა ებრძოლა კაპიტალიზმითვის". მიუხედავად ყოველივე ამისა გიობელსი არამც და არამს თავს "კომუნისტად" არ გრძნობდა.
+ამ პერიოდში გიობელსი არათუ უარყოფდა პოლიტიკურ კავშირ [[სსრკ]]-თან, არამედ [[ლენინი, ვლადიმირ|ლენინით]] იმდენად აღფრთოვანებული იყო, რომ ამ უკანასკნელში "რუსეთის ნაციონალურ გამათავისუფლებელს" ხედავდა. მისი აზრით "გერმანიასაც არ უნდა ებრძოლა კაპიტალიზმითვის". მიუხედავად ყოველივე ამისა გიობელსი არამც და არამს თავს "კომუნისტად" არ გრძნობდა.
 
 ცხოვრების ამ პერიოდში იგი დისტანციას იკავებდა [[ჰიტლერი, ადოლფ|ჰიტლერის]] მიმართაც. მისთვის მიუღებელი იყო ინდუსრიის მაგნატებისაგან პარტიის დაფინანსება, რასაც ჰიტლერი სიამოვნებით აკეთებდა. ამასთან ერთად გიობელსის აზრით პარტიის ცენტრალური ოფისი [[მიუნხენი|მიუნხენიდან]] სადმე, ჩრ. გერმანიაში უნდა გადასულიყო და ჰიტლერის ნაცვლად პარტიას სათავეში [[შტრასერი, გრეგორ|გრეგორ შტრასერი]] უნდა ჩადგომოდა.
 
@@ -85,7 +85,7 @@
 ====1944 წლის 20 ივლისის პუტჩის ჩაშლა====
 გიობელსმა მნიშვნელოვანი წვლილი შეიტანა [[1944 წლის 20 ივლისი პუტჩი|1944 წლის 20 ივლისი პუტჩის]] ჩაშლის საქმეში. [[მაიორი|მაიორ]] [[რემერი, ოტო ერნსტ|ოტო ერნსტ რემერს]] დავალებული ჰქონდა გიობელსის დაპატიმრება, თუმცა ამ უკანასკნელმა დაარწმუნა რემერი ტელეფონით დაკავშირებოდა ფიურერს და დარწმუნებულიყო რომ ის აფეთქებას ცოცხალი გადაურჩა. რემერი, დარწმუნდა რა ჰიტლერის უვნებლობაში, გიობელსის მხარეს გადავიდა. 
 
-გიობელსმა მოახერხა [[ბერლნი|ბერლინის]] რადიო მთავრობის ხელში დარჩენილიყო და გადასცა პუტჩის ჩაშლის ამბავი. იმ დღესვე რადიოთი გადაიცა ჰიტლერის მიმართვა გერმანელი ხალხისადმი, რამაც მოსახლეობაში ფიურერის სიკვდილის შესახებ ყოველგვარი ეჭვი გაფანტა.
+გიობელსმა მოახერხა [[ბერლინი|ბერლინის]] რადიო მთავრობის ხელში დარჩენილიყო და გადასცა პუტჩის ჩაშლის ამბავი. იმ დღესვე რადიოთი გადაიცა ჰიტლერის მიმართვა გერმანელი ხალხისადმი, რამაც მოსახლეობაში ფიურერის სიკვდილის შესახებ ყოველგვარი ეჭვი გაფანტა.
 
 ===="ტოტალური ომი"====
 [[სურათი:Goebbels-TW.jpg|thumb|180px|გიობელსი აცხადებს "ტოტალურ ომს"]]
@@ -106,7 +106,7 @@
 
 [[1945]] წლის [[1 მაისი|1 მაისს]] 22 საათზე იოზეფ გიობელსმა და მისმა მეუღლემ [[გიობელსი, მაგდა|მაგდამ]] თავი მოიწამლეს წყალბადის ციანიდით. გადმოცემა, თითქოს მაგდა გიობელსი მისმა მეუღლემ თვითმკვლელობის წინ ცეცხლსასროლი იარაღით მოკლა სიმართლეს არ შეესაბამება, რაც დაადასტურა [[წითელი არმია|წითელი არმიის]] ექსპერტების მიერ ჩატარებულმა ნახევრად დამწვარი გვამების ობდუქციამ. 
 
-გიობელსის თვითმკვლელობამდე ცოტა ხმით ადრე "[[SS]]"-ის ექიმმა ჰელმუტ კუნცმა ორივე მშობლის თანხმობით მათი ექვსივე შვილი ტკივილგამაყუჩებლით დააძინა, რომლებიც შემდგომ ძილში დედის, მაგდა გიობელსის და ჰიტლერის პირადი ექიმის [[შტუმპფეგერი, ლუდვიგ|ლუდვიგ შტუმპფეგერის]] მიერ წყალბადის ციანიდით მოწამლულ და მოკლულ იქნენ.
+გიობელსის თვითმკვლელობამდე ცოტა ხმით ადრე "[[სს]]"-ის ექიმმა ჰელმუტ კუნცმა ორივე მშობლის თანხმობით მათი ექვსივე შვილი ტკივილგამაყუჩებლით დააძინა, რომლებიც შემდგომ ძილში დედის, მაგდა გიობელსის და ჰიტლერის პირადი ექიმის [[შტუმპფეგერი, ლუდვიგ|ლუდვიგ შტუმპფეგერის]] მიერ წყალბადის ციანიდით მოწამლულ და მოკლულ იქნენ.
 
 ცოლ-ქმარ გიობელსების გვამები [[2 მაისი|2 მაისის]] გამთენიისას არასრულად იქნენ დამწვარი რაიხსკანცელარიის ბაღში. 17 საათზე წითელი არმიის ოფიცრებმა გვამები აღმოაჩინეს ფიურერის ბუნკერის საავარიო გასასვლელიდან რამდენიმე მეტრში. გამოძიების დასკვნაში ნათქვამია:
 
