*Empty MediaWiki Message*

--- a/ოკეანოგრაფიული_მუზეუმი_(მონაკო).mw
+++ b/ოკეანოგრაფიული_მუზეუმი_(მონაკო).mw
@@ -1,5 +1,5 @@
 [[სურათი:Oceanographic Museum Monaco.JPG|thumb|300px|ოკეანოგრაფიული მუზეუმი]]
-'''ოკეანოგრაფიული მუზეუმი''' მდებარეობს მონაკო-ვილში, [[მონაკო]]. დაფუძნდა 1910 წელს მონაკოს დიდი რეფორმატორი, პრინცი [[ალბერტ I]]-ის მიერ.
+'''ოკეანოგრაფიული მუზეუმი''' მდებარეობს მონაკო-ვილში, [[მონაკო]]. დაფუძნდა 1910 წელს მონაკოს დიდი რეფორმატორი, პრინცი [[ალბერ I (მონაკო)|ალბერ I]]-ის მიერ.
 
 მუზეუმში დიდი რაოდენობით ზღვის ცხოველია თავმოყრილი (ზღვის ვარსკვლავები, ცხენთევზები, კუები, მედუზები, კრაბები, კიბოები, გველთევზები, ზვიგენები, და მრავ. სხვა). მუზეუმის საკუთრებაშია ასევე დიდი რაოდენობით ზღვასთან დაკავშირებული საგნები, მათ შორის გემების მოდელები, ზღვის ცხოველთა ჩონჩხები, ხელსაწყოები, იარაღი და სხვ.
 
